# lab

./: README.md
Data-Science/Agents-google/: .gitignore  README.md  pyproject.toml  workshop-instruction.md
Data-Science/Agents-google/agent/: .env  agent.py
Data-Science/Agents-google/agent/.adk/: session.db
Data-Science/Credit-Risk-Modeling/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-prod.txt
Data-Science/Credit-Risk-Modeling/app/: main.py
Data-Science/Credit-Risk-Modeling/app/routers/: pd.py
Data-Science/Credit-Risk-Modeling/notebooks/01_pd/: README.md
Data-Science/Credit-Risk-Modeling/src/credit_risk/: __init__.py
Data-Science/Credit-Risk-Modeling/src/credit_risk/core/: __init__.py  config.py  data_cleaning.py  features.py  woe.py
Data-Science/Credit-Risk-Modeling/src/credit_risk/ead/: __init__.py
Data-Science/Credit-Risk-Modeling/src/credit_risk/lgd/: __init__.py
Data-Science/Credit-Risk-Modeling/src/credit_risk/pd/: __init__.py  inference.py  test_prediction.py  train.py
Data-Science/credit-risk-modeling/: Makefile  README.md  pyproject.toml
Data-Science/credit-risk-modeling/docs/: mkdocs.yml
Data-Science/credit-risk-modeling/docs/docs/: index.md
Hackathons/ING-Global-Hackathon-2026/aml-validator-engine/: .gitignore  Dockerfile  docker-compose.yml  requirements.txt
Hackathons/ING-Global-Hackathon-2026/aml-validator-engine/00_UI_templates/aistudio-v1/: App.tsx  README.md  (+6 more)
Hackathons/ING-Global-Hackathon-2026/aml-validator-engine/03_ai_orchestrator/: agent.py  dashboard_data.py  main.py  seed_demo.py
(+40 files in other folders)
