[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "credit_risk_modeling"
version = "0.0.1"
description = "The following is a hands-on learning project for end-to-end ML in credit risk"
authors = [
  { name = "Prasenjeet Rathore" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13.0"
dependencies = [
    "kagglehub>=1.0.0",
]


[tool.ruff]
line-length = 99
src = ["credit_risk_modeling"]
include = ["pyproject.toml", "credit_risk_modeling/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["credit_risk_modeling"]
force-sort-within-sections = true

